# WeChat-Daily-Greeting

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-greeting.yml  test-greeting.yml
tests/: test_main.py
wechat_templates/: test.template
ybot/: main.py  send_now.py  weather.py
