[project]
name = "ybot"
version = "0.1.0"
description = "Daily greeting bot powered by DenshoBato"
requires-python = ">=3.11"
dependencies = [
    "densho-bato",
    "python-dotenv>=1.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[tool.uv.sources]
densho-bato = { path = "lib/DenshoBato" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
